--- a/Pizza Calculator/Resources/layout/Compare.axml
+++ b/Pizza Calculator/Resources/layout/Compare.axml
@@ -1,30 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>  
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
-    android:layout_width="match_parent"  
-    android:layout_height="match_parent">  
-  <LinearLayout  
-      android:orientation="vertical"  
-      android:layout_width="match_parent"  
-      android:layout_height="wrap_content">  
-    <microcharts.droid.ChartView  
-        android:id="@+id/chartView"  
-        android:layout_width="match_parent"  
-        android:layout_height="160dp" />  
-    <microcharts.droid.ChartView   
-        android:id="@+id/Chart2"  
-                                  android:layout_width="match_parent"  
-                                  android:layout_height="160dp"/>  
-    <microcharts.droid.ChartView android:id="@+id/Chart3"  
-                                  android:layout_width="match_parent"  
-                                  android:layout_height="160dp"/>  
-    <microcharts.droid.ChartView android:id="@+id/Chart4"  
-                                  android:layout_width="match_parent"  
-                                  android:layout_height="160dp"/>  
-    <microcharts.droid.ChartView android:id="@+id/Chart5"  
-                                  android:layout_width="match_parent"  
-                                  android:layout_height="160dp"/>  
-    <microcharts.droid.ChartView android:id="@+id/Chart6"  
-                                  android:layout_width="match_parent"  
-                                  android:layout_height="160dp"/>  
-  </LinearLayout>  
-</ScrollView>  
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation=    "vertical"
+    android:layout_width=    "match_parent"
+    android:layout_height=    "match_parent">
+	<Com.Syncfusion.Charts.SfChart
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:id="@+id/sfChart1"
+		android:layout_height="200dp">
+	</Com.Syncfusion.Charts.SfChart>
+</LinearLayout>
